# astshield

./: .gitignore  README.md  pyproject.toml  test_crypto.py  test_obfuscation.py
astshield/: __init__.py  api.py  cli.py  formatter.py  generators.py  transformer.py
tests/: test_protection_levels.py  test_transformer.py
