[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astshield"
version = "1.0.0"
authors = [
  { name="Leonardo García", email="leonardo.garcia.bernal@gmail.com" },
]
description = "Motor de ofuscación estructural y criptográfica para Python."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
astshield = "astshield.cli:main"

